--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  qntnt
+discord_invite: https://discord.gg/CgH6VheMS9
 
 # Build settings
 theme: minima
@@ -36,6 +37,9 @@ plugins:
 collections:
   projects:
     output: true
+
+show_excerpts: true
+excerpt_separator: <!--more-->
 
 # Exclude from processing.
 # The following items will not be processed, by default.
